fix: align banner text on y

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,14 @@
   background-image: url("../img/ai-generated-beach.webp");
   background-position: center;
   background-size: cover;
+  /* background-attachment: fixed;
+  width: 100%; */
+  height: 30vh;
 }
 
 .navbar {
   --bs-navbar-nav-link-padding-x: 0.7rem;
+  --bs-navbar-padding-y: 0;
 }
 
 .my-btn {
